force-app/main/default/objects/Order__c/fields/Distributer__c.field-meta.xml
<CustomField>
    <fullName>Distributer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer/Distributor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Distributer)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>