force-app/main/default/objects/Order__c/fields/Franchises__c.field-meta.xml
<CustomField>
    <fullName>Franchises__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Franchise</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Franchise</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>